# acinetobase--static

./: .gitignore  CHANGELOG.md  CNAME  README.md  about.html  acinetobase-static.cabal  acinetobase-static.nix  build.js  cabal.project.freeze  default.nix  index.html  index.js  package.json  project.nix  protocols.html  release.nix  shell.nix  slick.nix  spago.dhall  submission.html  vib.css
.github/workflows/: main.yml
_site/: index.html
_site/isolates/: .html  AB14-VUB.html  AB16-VUB.html  AB167-VUB.html  AB169-VUB.html  AB171-VUB.html  AB172-VUB.html  AB173-VUB.html  AB175-VUB.html  AB176-VUB.html  AB177-VUB.html  AB179-VUB.html  AB180-VUB.html  AB181-VUB.html  AB183-VUB.html  (+33 more)
app/: Main.hs
data/: metadata.csv
doc/: requirements_interview_1.md
isolates/: AB14-VUB.html  AB16-VUB.html  AB167-VUB.html  AB169-VUB.html  AB171-VUB.html  AB172-VUB.html  AB173-VUB.html  AB175-VUB.html  AB176-VUB.html  AB177-VUB.html  AB179-VUB.html  AB180-VUB.html  AB181-VUB.html  AB183-VUB.html  AB186-VUB.html  AB187-VUB.html  AB188-VUB.html  AB189-VUB.html  AB193-VUB.html  AB194-VUB.html  AB20-VUB.html  AB21-VUB.html  AB212-VUB.html  AB213-VUB.html  AB214-VUB.html  AB216-VUB.html  AB217-VUB.html  AB219-VUB.html  AB220-VUB.html  AB222-VUB.html  AB224-VUB.html  AB226-VUB.html  AB227-VUB.html  AB229-VUB.html  AB231-VUB.html  AB232-VUB.html  AB233-VUB.html  AB3-VUB.html  AB32-VUB.html  AB36-VUB.html  (+9 more)
src/: Main.purs  Site.js  Site.purs  index.js
static/: acinetobase.css  vib.css
templates/: about.html  footer.html  head.html  header.html  index.html  isolate.html  protocols.html  submission.html
